--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,29 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "module": "ESNext",
-    "target": "es5",
-    "baseUrl": "./",
-    "lib": [
-        "dom",
-        "es2015",
-        "es2016",
-        "es2017",
-        "esnext"
+    "compilerOptions": {
+        "module": "CommonJs",
+        "target": "ES5",
+        "noImplicitAny": false,
+        "sourceMap": true,
+        "experimentalDecorators": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "moduleResolution": "node",
+        // "traceResolution": true,
+        "lib": [
+            "es2017",
+            "dom"
+        ],
+        "outDir": "build",
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "baseUrl": "./"
+    },
+    "exclude": [
+        "node_modules",
+        "**/code_base/src/**/*.spec.ts"
     ],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "downlevelIteration": true,
-    "importHelpers": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "sourceMap": true,
-    "jsx": "react",
-    "allowJs": true,
-    "noImplicitAny": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
-    "noUnusedLocals": false,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "forceConsistentCasingInFileNames": true,
-    "paths": {
-      "@/*": [
-        "src/*" // alias to have import { Button } from '@/components';
-      ]
-    }
-  },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+    "include": [
+        "**/code_base/src/**/*.ts"
+    ]
 }
